Closed
Bug 10797
Opened 27 years ago
Closed 27 years ago
[PP][blocker] Necko: Messenger hangs trying to send or recieve mail
Categories
(Core :: Networking, defect, P1)
Tracking
()
VERIFIED
FIXED
M9
People
(Reporter: jay, Assigned: gordon)
References
Details
(Whiteboard: Looks like a necko problem with blocking writes on the mac)
Composing a new message and sending it (clicking the Send button) or trying to
recieve new mail (clicking Get Msg button) freezes up messenger (and
apprunner). (This occurs in today's NECKO build, it was not a problem with
yesterdays M9 w/o NECKO build)
Step: Self explanatory - try sending a message and after you freeze and restart
messenger, compose a new message in 4.7 and try to recieve it with messenger and
freeze again.
Machine and Build:
MacOS 8.5.1 with build 1999072908
Note: Not a problem with Win32 or Linux builds
Component: Necko → Networking-Mail
Summary: [PP] Messenger hangs trying to send or recieve mail → [PP] Necko: Messenger hangs trying to send or recieve mail
just changing component. Per mscott suggestion, we don't need a Necko component
for mail/news.
Updated•27 years ago
|
Assignee: gagan → mscott
Target Milestone: M9
Comment 3•27 years ago
|
||
I think this should be assigned to me and not gagan.
taking it from him...setting milestone to m9 and accepting.
Updated•27 years ago
|
Status: NEW → ASSIGNED
Comment 4•27 years ago
|
||
adding hangas to the cc line. Paul, can you try sending me a message with your
build?
Summary: [PP] Necko: Messenger hangs trying to send or recieve mail → [PP][blocker] Necko: Messenger hangs trying to send or recieve mail
Updated•27 years ago
|
Priority: P3 → P1
Comment 6•27 years ago
|
||
This should be P1, marking so, hope that's ok
Comment 7•27 years ago
|
||
Hey Paul, can we sit at your machine and step through the debugger this morning?
Updated•27 years ago
|
Whiteboard: Looks like a necko problem with blocking writes on the mac
Comment 8•27 years ago
|
||
This appears to be a necko specific Mac bug with blocking writes and the socket
transport.
It looks like the socket transport on the Mac hangs whenever we make a blocking
write on the socket interface. Calling write on the output stream for the socket
never returns and we freeze the Mac. I haven't stepped into the write to see
where we freeze yet. This is why we freeze both when sending messages and
getting new mail. These are the two netwerk operations we perform on the Mac
which involve blocking writes to the socket transport.
Adding rick potts and warren to the cc list as this is looking like a core necko
problem and not a mailnews specifc one.
Updated•27 years ago
|
Assignee: mscott → gordon
Status: ASSIGNED → NEW
Component: Networking-Mail → Necko
Comment 9•27 years ago
|
||
Re-assigning to gordon as this is a necko bug (changing the component too =)).
Gordon, you should be able to test this using the necko socket test instead of
messenger.
I'm performining a blocking write on the nsSocketTransport.
Comment 10•27 years ago
|
||
Hey Gordon, do you have any updates on this bug? This is really hurting the mac
mail client as you can't use it for dogfood at all right now. Please let me know
if I can help.
| Assignee | ||
Comment 11•27 years ago
|
||
I'm working on bringing up the socket test on Mac. I hope to have more
information later today.
Comment 12•27 years ago
|
||
we see this when we first get pop mail.
here's a stack trace:
00000000 PPC 0EB4AAD4
03309D80 PPC 0EB49EE8 main+00060
03309D30 PPC 0EB49738 main1(int, char**)+00E2C
03309B90 PPC 0EA504D8 nsAppShellService::Run()+00020
03309B50 PPC 0E91C46C nsAppShell::Run()+00050
03309AD0 PPC 0E91D210 nsMacMessagePump::DoMessagePump()+00044
03309A80 PPC 0E91D518 nsMacMessagePump::DispatchEvent(int,
EventRecord*)+00188
03309A30 PPC 0EAA9E9C Repeater::DoRepeaters(const EventRecord&)+00034
033099F0 PPC 0E8FEEF0 nsToolkit::RepeatAction(const EventRecord&)+00044
033099B0 PPC 0E13921C nsEventQueueServiceImpl::ProcessEvents()+0002C
03309970 PPC 0E1347A4 nsHashtable::Enumerate(int (*)(nsHashKey*, void*,
void*), void*)
+0003C
03309930 PPC 0E1BC63C PL_HashTableEnumerateEntries+00060
033098C0 PPC 0E133FE4 _hashEnumerate(PLHashEntry*, int, void*)+00030
03309880 PPC 0E13917C EventDispatchingFunc(nsHashKey*, void*,
void*)+0003C
03309840 PPC 0E150228 nsEventQueueImpl::ProcessPendingEvents()+00018
03309800 PPC 0E1BB508 PL_ProcessPendingEvents+00078
033097B0 PPC 0E1BB63C PL_HandleEvent+0004C
03309770 PPC 0EB2A224
nsStreamListenerEvent::HandlePLEvent(PLEvent*)+0002C
03309720 PPC 0EB2B104 nsOnDataAvailableEvent::HandleEvent()+00044
033096D0 PPC 0DABFC14 nsMsgProtocol::OnDataAvailable(nsIChannel*,
nsISupports*, nsIInp
utStream*, unsigned int, unsigned int)+00078
03309680 PPC 0DAA943C nsPop3Protocol::ProcessProtocolState(nsIURI*,
nsIInputStream*, u
nsigned int, unsigned int)+00374
03309570 PPC 0DAA5C10 nsPop3Protocol::SendUsername()+00104
033094E0 PPC 0DAA5584 nsPop3Protocol::SendData(nsIURI*, const
char*)+0002C
033094A0 PPC 0DABFB40 nsMsgProtocol::SendData(nsIURI*, const char*)+00088
03309440 PPC 0E1864CC nsBufferOutputStream::Write(const char*, unsigned
int, unsigned
int*)+000D4
Comment 13•27 years ago
|
||
*** Bug 10971 has been marked as a duplicate of this bug. ***
Comment 14•27 years ago
|
||
This bug may also be causing http://bugzilla.mozilla.org/show_bug.cgi?id=11749
so that News on the Mac is not able to be used.
Comment 15•27 years ago
|
||
*** Bug 11749 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•27 years ago
|
||
So I've got the TestSocketTransport up and running on the Mac, and it seems to
work fine for both the async and sync cases. I'm trying to reproduce the problem
with my build of AppRunner, but I'm currently blocked by strange menu behavior.
Therefore I am unable to set the user name and server for mail.
Patrick Beard's build (pulled at the same time) doesn't have the same problem, so
I'm going to ask some of the XPFE folks how my setup could be causing this.
Comment 17•27 years ago
|
||
*** Bug 11760 has been marked as a duplicate of this bug. ***
Comment 18•27 years ago
|
||
*** Bug 11752 has been marked as a duplicate of this bug. ***
Updated•27 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 27 years ago
Resolution: --- → FIXED
Comment 19•27 years ago
|
||
I checked in 2 fixes that I think will fix this problem. Please try it again.
Thanks to Gordon and Patrick for tracking it down.
Comment 20•27 years ago
|
||
I'm pulling and building the tip now on my mac. I'll report back with the
results.
Comment 21•27 years ago
|
||
I'm able to get new news articles and post a news article from the mac.
I'm also able to send email and get IMAP mail.
nice work, gordon, patrick and warren.
Comment 22•27 years ago
|
||
Great work guys.
Using today Mac commercial seamonkey build 1999-08-13-m9 build, I can
successfully send and receive on POP, IMAP, and news.
Marking bug as verified.
Note: I find that I have to wait for the status bar says done before I can
perform the next mail operation.
Comment 23•26 years ago
|
||
Bulk move of all Necko (to be deleted component) bugs to new Networking
component.
You need to log in
before you can comment on or make changes to this bug.
Description
•