Fix for bug 10797: Messenger hang. 2 problems: mac shouldn't be using page manager -- doesn't do vm, and trying to flush when the buffer is empty ends up spinning.